# next-js-wasm

./: .gitignore  Cargo.toml  next.config.js  package.json  tsconfig.json
pages/: index.tsx
src/: lib.rs
